Fixed the apply and reset buttons' layout on smaller devices

--- a/UI/src/stylesheet.scss
+++ b/UI/src/stylesheet.scss
@@ -283,9 +283,11 @@ $dropdown-link-active-color: var(--bs-dropdown-color);
 
 .settings {
 
-    .btn.apply,
-    .btn.reset {
-        min-width: 10rem;
+    @include media-breakpoint-up(sm) {
+        .btn.apply,
+        .btn.reset {
+            min-width: 10rem;
+        }
     }
 
     .card {
